--- a/helloweb-ex02/package.json
+++ b/helloweb-ex02/package.json
@@ -1,4 +1,15 @@
 {
+  "name": "helloweb-ex02",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "debug": "nodaemon index.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.17.1"
   },
