--- a/emaillist/package.json
+++ b/emaillist/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "helloweb-ex02",
+  "name": "emaillist",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "debug": "nodemon index.js" 
+    "debug": "nodemon index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "ejs": "^3.1.6",
+    "express": "^4.17.1",
+    "mysql2": "^2.3.3"
   },
   "devDependencies": {
-    "ejs": "^3.1.6"
+    "nodemon": "^2.0.15"
   }
 }
