--- a/douzone-jdk-math/package.json
+++ b/douzone-jdk-math/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "douzone-bipa-math.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js",
+    "debug": "nodaemon index.js"
   },
   "keywords": [],
   "author": "",
